# Analysis

./: .gitignore  Cell dataset column labels.txt  Figs_from_Lit.ipynb  Figure1.ipynb  Figure2.ipynb  Figure2_ANVOA_SVM_onCC.ipynb  Figure2_SVM.ipynb  Figure2_SVM_CC_withAP.ipynb  Figure3.ipynb  Notebook_Analyse_protocols.ipynb  Notebook_Labmeeting_16Sep23.ipynb  Notebook_Tsodyks-Markram_1998.ipynb  Notebook_combine_cameraImage_with_grid.ipynb  Paper_Figures.ipynb  Paper_to_do_03Sept24.txt  STP-EI papers.txt  Sulus_data_parsing.ipynb  allCells.py  all_cells.py  all_cells_per_protocol.txt  analysis.ipynb  analysis.py  batchAnalysis.py  cc_LTM_data_redo.ipynb  cc_data_redo.ipynb  collate_dataset.ipynb  collate_dataset.py  columns.py  combine_cameraImage_with_grid.ipynb  data_correct_text.ipynb  deconv11.py  ei_stp_dois.txt  figure1.py  figure2.py  figure3.py  generate_figures.py  generate_screening_param_figures.py  notes.txt  parse_data.py  plotFig2.py  (+19 more)
eidynamics/: abf_to_data.py  covergence_protocol_20Hz_experiment_parameters_default.py  covergence_protocol_50Hz_experiment_parameters_default.py  data_quality_checks.py  ephys_classes.py  ephys_functions.py  errors.py  experiment_parameters_default.py  expt_to_dataframe.py  fit_PSC.py  pattern_index.py  plot_tools.py  pyproject.toml  utils.py
jan29_redo_findSim_with_refpk/: fs_7492_0_5_46_20_pk.json  fs_7492_0_5_46_50_pk.json  fs_7492_1_5_48_20_pk.json  fs_7492_1_5_48_50_pk.json  plotParamDistrib.py  tab_presyn_patterns42.py  tab_presyn_patterns43.py  tab_presyn_patterns_LR_43.py  tab_presyn_patterns_neurotrans43.py
(+322 files in other folders)
